--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 	<param name="bgcolor" value="#0F0B0C">
 	<param name="allowscriptaccess" value="always">
 	<param name="allowfullscreen" value="true">
-	<param name="flashvars" value="filename=song.mp3&amp;length=270&amp;artist=Toby%20Keith&amp;name=She%20Never%20Cried%20In%20Fron%20Of%20Me&amp;loop=1&amp;icon=http://aicon.ngfiles.com/525/525792.png">
+	<param name="flashvars" value="filename=song.mp3&amp;length=270&amp;artist=Bud%20Redhead&amp;name=Title%20Screen%20Theme&amp;loop=1&amp;icon=http://aicon.ngfiles.com/525/525792.png">
 	<param name="wmode" value="direct">
 	<param name="allowfullscreeninteractive" value="true">
 </object>
