--- a/index.html
+++ b/index.html
@@ -1,17 +1,8 @@
 <html>
 <head>
-	<title>Test Page (Flash Music Player)</title>
+	<title>Rickelectric</title>
 </head>
 <body>
-	<h4>Theme</h4>
-	<object id="player" width="590" height="290" data="audioplayer.swf" type="application/x-shockwave-flash">
-		<param name="movie" value="audioplayer.swf">
-		<param name="bgcolor" value="#0F0B0C">
-		<param name="allowscriptaccess" value="always">
-		<param name="allowfullscreen" value="true">
-		<param name="flashvars" value="filename=song.mp3&amp;length=270&amp;artist=Bud%20Redhead&amp;name=Title%20Screen%20Theme&amp;loop=1&amp;icon=http://aicon.ngfiles.com/525/525792.png">
-		<param name="wmode" value="direct">
-		<param name="allowfullscreeninteractive" value="true">
-	</object>
+	<iframe style="overflow:scroll; width:100%; height:100%;" src="rickelectric.herobo.com"></iframe>
 </body>
 </html>
