--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 	<title>Rickelectric</title>
 </head>
 <body>
-	<iframe style="overflow:scroll; width:100%; height:100%;" src="rickelectric.herobo.com"></iframe>
+	<iframe style="overflow:scroll; width:100%; height:100%;" src="http://rickelectric.herobo.com"></iframe>
 </body>
 </html>
