--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 	<title>Rickelectric</title>
 </head>
-<body>
-	<iframe style="overflow:scroll; width:100%; height:100%;" src="http://rickelectric.herobo.com"></iframe>
+<body style="padding:0px;">
+	<iframe style="overflow:scroll; width:100%; height:95%;" src="http://rickelectric.herobo.com"></iframe>
 </body>
 </html>
